--- a/lorem-ipsum-bundle/composer.json
+++ b/lorem-ipsum-bundle/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": ">= 8.1",
-        "symfony/config": "^6.1",
-        "symfony/dependency-injection": "^6.1",
-        "symfony/http-kernel": "^6.1"
+        "php": "^7.1.3",
+        "symfony/config": "^3.4 || ^4.0",
+        "symfony/dependency-injection": "^3.4 || ^4.0",
+        "symfony/http-kernel": "^3.4 || ^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -26,9 +26,8 @@
         }
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.7",
-        "symfony/browser-kit": "^6.1",
-        "symfony/framework-bundle": "^6.1",
-        "symfony/phpunit-bridge": "^6.1"
+        "symfony/phpunit-bridge": "^3.4 || ^4.0",
+        "symfony/framework-bundle": "^3.4 || ^4.0",
+        "symfony/browser-kit": "^3.4 || ^4.0"
     }
 }
